# ai-assistant

./: .gitignore  CLAUDE.md  PLAN.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
apps/adk/: .env.example  alembic.ini  package.json  pyproject.toml
apps/adk/src/: config.py  constants.py
apps/adk/src/agents/: __init__.py  calendar_agent.py  root_agent.py
apps/adk/src/api/: main.py
apps/adk/src/api/routes/: __init__.py  chat.py  conversations.py  oauth.py  users.py
apps/adk/src/db/: __init__.py  models.py  session.py
apps/adk/src/migrations/: env.py
apps/adk/src/migrations/versions/: c0d704fe1f40_create_initial_tables.py
apps/adk/src/prompts/: calendar_agent.md  root_agent.md
apps/adk/src/services/: session_service.py  token_service.py
apps/adk/src/tools/: __init__.py  calendar_tools.py  datetime_tools.py
apps/web/: .env.example  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/api/chat/: route.ts
apps/web/src/atoms/: ui-atoms.ts
apps/web/src/components/chat/: chat-container.tsx  chat-input.tsx  file-upload.tsx  message-item.tsx  message-list.tsx  sidebar.tsx  voice-recorder.tsx
apps/web/src/components/ui/: avatar.tsx  button.tsx  scroll-area.tsx
apps/web/src/lib/: auth.ts
apps/web/src/stores/: chat-store.ts
